--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worst GDPS Demonlist!!!</title>
+    <title>Worst GDPS Challengelists!!!</title>
     <script>
         if (!Array.prototype.last){
             Array.prototype.last = function(){
