Change YouTube embed link to nocookie version

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>	<br>
                 <div>
 <iframe
-  src="https://www.youtube.com/embed/${escapeAttr(ytlink)}&autoplay=1"
+  src="https://www.youtube-nocookie.com/embed/${escapeAttr(ytlink)}"
   srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 2px black}img{width:100%;height:100%;object-fit:cover}</style><a href='https://www.youtube.com/watch?v=${escapeAttr(ytlink)}'><img src='https://img.youtube.com/vi/${escapeAttr(ytlink)}/hqdefault.jpg' alt='video'><span>Play</span></a>"
   frameborder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
