--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Worst GDPS DILL</title>
     <script>
         if (!Array.prototype.last){
@@ -134,7 +136,7 @@
                 </div>	<br>
                 <div>
 <iframe
-  src="https://www.youtube-nocookie.com/embed/${escapeAttr(ytlink)}"
+  src="https://www.youtube-nocookie.com/embed/${escapeAttr(ytlink)}?autoplay=1"
   srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 2px black}img{width:100%;height:100%;object-fit:cover}</style><a href='https://www.youtube-nocookie.com/embed/${escapeAttr(ytlink)}'><img src='https://img.youtube.com/vi/${escapeAttr(ytlink)}/maxresdefault.jpg' alt='video'><span>&#x25B6;</span></a>"
   frameborder="0"
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -231,7 +233,7 @@ style="aspect-ratio: 16 / 9;"></iframe>
             background-attachment: fixed;
             background-position: center; 
             font-family: arial;
-            color:green;
+            color:blue;
             transition: 1.5s;
         }
         .listcontainer{
@@ -294,15 +296,15 @@ style="aspect-ratio: 16 / 9;"></iframe>
 </head>
 <body>
     <div class="centered">
-    <img src="https://images.cooltext.com/5743348.png" id="title" alt="title">
+    <img src="https://images.cooltext.com/5743349.png" id="title" alt="title">
     <div class="loader"></div>
 
     <!-- Checkbox controls for selecting which sheet(s) to show.
          At least one must be selected; unchecking the last will be prevented. -->
     <div class="list-toggle-row centered">
-        <label><input class="list-toggle" type="checkbox" value="main"> main</label>
-        <label><input class="list-toggle" type="checkbox" value="unranked"> unranked</label>
-        <label><input class="list-toggle" type="checkbox" value="unrestricted"> unrestricted</label>
+        <label><input class="list-toggle form-check-input" type="checkbox" value="main"> main</label>
+        <label><input class="list-toggle form-check-input" type="checkbox" value="unranked"> unranked</label>
+        <label><input class="list-toggle form-check-input" type="checkbox" value="unrestricted"> unrestricted</label>
     </div>
     
     <div class="listcontainer"></div>
