Update iframe srcdoc for YouTube embed

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div>
     <iframe
       src="https://www.youtube-nocookie.com/embed/${escapeAttr(ytId)}?autoplay=1"
-      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;background:rgba(0,0,0,.4)}</style><a href='https://www.youtube.com/watch?v=${escapeAttr(ytId)}'><img src='https://i.ytimg.com/vi/${escapeAttr(ytId)}/hqdefault.jpg' alt='${escapeAttr(name)}'><span>▶</span></a>"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;background:rgba(0,0,0,.4)}</style><a href='https://www.youtube-nocookie.com/embed/${escapeAttr(ytId)}'><img src='https://i.ytimg.com/vi/${escapeAttr(ytId)}/hqdefault.jpg' alt='${escapeAttr(name)}'><span>▶</span></a>"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
